...
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/passwd"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/confirmPasswd"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/register"
        android:onClick="signUpUser"/>
</LinearLayout>
...
